actualize el service y añadiendo mejoras de manejos de errores para elos http en el controller